--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.flipkart.hibernate.multisession</groupId>
-    <artifactId>read_write_seperation</artifactId>
+    <artifactId>hibernate-addons</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>read-write-seperation</module>
+    </modules>
 
     <repositories>
         <repository>
@@ -33,26 +37,9 @@
         <project.version>1.0-SNAPSHOT</project.version>
     </properties>
 
-    <name>casper-base</name>
-    <dependencies>
-        <dependency>
-            <artifactId>hibernate-core</artifactId>
-            <groupId>org.hibernate</groupId>
-            <version>4.3.11.Final</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss.logging</groupId>
-                    <artifactId>jboss-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>xml-apis</groupId>
-                    <artifactId>xml-apis</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
+    <name>hibernate-addons</name>
     <build>
-        <finalName>read-write-seperation</finalName>
+        <finalName>hibernate-addons</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
