--- a/abstract-dao/pom.xml
+++ b/abstract-dao/pom.xml
@@ -9,6 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>read-write-seperation</artifactId>
+    <artifactId>abstract-dao</artifactId>
 
 </project>
