--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,47 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>read-write-seperation</module>
+        <module>abstract-dao</module>
     </modules>
 
     <properties>
         <dropwizard.version>0.9.1</dropwizard.version>
         <project.version>1.0-SNAPSHOT</project.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <artifactId>hibernate-core</artifactId>
+            <groupId>org.hibernate</groupId>
+            <version>4.3.11.Final</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.logging</groupId>
+                    <artifactId>jboss-logging</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>xml-apis</groupId>
+                    <artifactId>xml-apis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-hibernate</artifactId>
+            <version>0.9.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>hibernate-core</artifactId>
+                    <groupId>org.hibernate</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
     <name>hibernate-addons</name>
     <build>
